<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/location_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/location_placeholder"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/status_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="@string/status_placeholder"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_txt" />

    <TextView
        android:id="@+id/temperature_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-thin"
        android:text="@string/temperature_placeholder"
        android:textColor="@color/white"
        android:textSize="90sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status_txt" />

    <TextView
        android:id="@+id/temp_min_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="115dp"
        android:layout_marginTop="5dp"
        android:text="@string/temp_min_placeholder"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperature_txt" />

    <TextView
        android:id="@+id/temp_max_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="115dp"
        android:text="@string/temp_max_placeholder"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperature_txt" />

    <ImageView
        android:id="@+id/wind_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/wind"
        android:contentDescription="@string/wind_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/pressure_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/pressure"
        android:contentDescription="@string/pressure_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/humidity_image"
        app:layout_constraintStart_toEndOf="@+id/wind_image"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/humidity_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/humidity"
        android:contentDescription="@string/humidity_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/wind_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/wind_value"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/wind_image"
        app:layout_constraintStart_toStartOf="@+id/wind_image"
        app:layout_constraintTop_toBottomOf="@+id/wind_image" />

    <TextView
        android:id="@+id/pressure_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/pressure_value"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/pressure_image"
        app:layout_constraintStart_toStartOf="@+id/pressure_image"
        app:layout_constraintTop_toBottomOf="@+id/pressure_image" />

    <TextView
        android:id="@+id/humidity_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/humidity_value"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/humidity_image"
        app:layout_constraintStart_toStartOf="@+id/humidity_image"
        app:layout_constraintTop_toBottomOf="@+id/humidity_image" />

</androidx.constraintlayout.widget.ConstraintLayout>